# bifrauth

./: .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/bifrauth-crypto/: Cargo.toml
crates/bifrauth-crypto/src/: lib.rs
crates/bifrauth-crypto/tests/: integration.rs
crates/bifrauth-ipc/: Cargo.toml
crates/bifrauth-ipc/src/: clock.rs  deadline.rs  frame.rs  lib.rs  transport.rs  wire.rs
crates/bifrauth-proto/: Cargo.toml
crates/bifrauth-proto/src/: cbor.rs  lib.rs  schema.rs  text.rs  unicode_cn.rs
crates/bifrauth-transport/: Cargo.toml
crates/bifrauthctl/: Cargo.toml
crates/bifrauthctl/src/: lib.rs  main.rs
crates/bifrauthd/: Cargo.toml
crates/bifrauthd/src/: e2e_tests.rs  lib.rs  main.rs  registry.rs  resolver.rs  serve.rs  session.rs  systemd.rs
crates/bifrauthd/tests/: e2e_socket.rs  registry.rs
crates/mock-iphone/: Cargo.toml
crates/mock-iphone/src/: lib.rs
crates/pam_bifrauth/: Cargo.toml
docs/: faceid-pam-design-review-v3-20260713-1704.md  faceid-pam-design-review.md  faceid-pam-design.md  implementation-plan.md  ipc-design.md  iphone-faceid-linux-pam-design.md  naming.md  progress.md  understanding-book-playbook.md
docs/plans/: 0009-bifrauthctl-and-e2e.md  0011-number-matching.md
docs/reviews/: bifrauthctl-and-e2e-review-20260714.md  cbor-profile-review-20260713.md  faceid-pam-design-review-v2-20260713-1431.md  naming-and-rename-review-20260713.md  number-matching-review-20260714.md
docs/security-review-book/: OUTLINE.md  appendix-a-glossary.md  appendix-b-quiz-answers.md  ch01-linux-minimal-model.md  ch02-authn-authz-threat-model.md  ch03-pam.md  ch04-polkit-1password.md  ch05-crypto-secure-enclave.md  ch06-local-ipc-files.md  ch07-canonical-encoding-cbor.md
ios/: README.md
packaging/systemd/: bifrauthd.service  bifrauthd.socket
spec/: cbor-profile.md
spec/vectors/: README.md  crypto_vectors.tsv  messages_golden.tsv  text_policy.tsv
tools/unicode/: gen_cn_table.py
