# BifrAuth Rust ワークスペース
# 実装計画 docs/implementation-plan.md（v0.4）§3 のクレート構成に対応する。
[workspace]
resolver = "3"
members = [
    "crates/bifrauth-proto",
    "crates/bifrauth-crypto",
    "crates/bifrauth-ipc",
    "crates/bifrauthd",
    "crates/bifrauth-transport",
    "crates/pam_bifrauth",
    "crates/bifrauthctl",
    "crates/mock-iphone",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/shunichi/bifrauth"
