# BifrAuth Rust workspace.
# Matches the crate layout in docs/implementation-plan.md (v0.4) §3.
[workspace]
resolver = "3"
members = [
    "crates/bifrauth-proto",
    "crates/bifrauth-crypto",
    "crates/bifrauth-ipc",
    "crates/bifrauthd",
    "crates/bifrauth-transport",
    "crates/pam_bifrauth",
    "crates/bifrauthctl",
    "crates/mock-iphone",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/shunichi/bifrauth"

# Dependency versions are centralized in the workspace (plan §3). Each crate references them via workspace = true.
# Pin the latest stable version resolved by cargo add etc. (CLAUDE.md library policy).
[workspace.dependencies]
unicode-normalization = "0.1.25"
ed25519-dalek = { version = "3.0.0", features = ["zeroize"] }
p256 = "0.14.0"
sha2 = "0.11.0"
getrandom = "0.4.3"
rustix = { version = "1.1.4", features = ["time"] }
# NSS username->uid resolution (plan §4.9): uses reentrant getpwnam_r. glibc dynamic linking assumed.
uzers = "0.12.2"
