[package]
name = "bifrauth-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
bifrauth-proto = { path = "../bifrauth-proto" }
