[package]
name = "bifrauthctl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bifrauthd = { version = "0.1.0", path = "../bifrauthd" }
rustix = { workspace = true, features = ["process"] }

[dev-dependencies]
mock-iphone = { path = "../mock-iphone" }
