[package]
name = "bifrauthd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bifrauth-crypto = { version = "0.1.0", path = "../bifrauth-crypto" }
bifrauth-proto = { version = "0.1.0", path = "../bifrauth-proto" }
bifrauth-ipc = { version = "0.1.0", path = "../bifrauth-ipc" }
rustix = { workspace = true, features = ["net", "process", "fs"] }
uzers = { workspace = true }

[dev-dependencies]
mock-iphone = { path = "../mock-iphone" }
