[package]
name = "mock-iphone"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bifrauth-crypto = { version = "0.1.0", path = "../bifrauth-crypto" }
bifrauth-proto = { version = "0.1.0", path = "../bifrauth-proto" }
p256.workspace = true
