[package]
name = "pam_bifrauth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PAM モジュールは cdylib（pam_bifrauth.so）としてビルドする。
# 実装計画 §4.6: FFI 境界で catch_unwind し、panic を PAM 呼び出し元へ伝播させない
# （panic = "unwind" 既定を維持し abort にしない）。テスト用に rlib も出す。
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
