[package]
name = "pam_bifrauth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The PAM module builds as a cdylib (pam_bifrauth.so).
# Implementation plan §4.6: catch_unwind at the FFI boundary so panics never propagate to the PAM caller
# (keep the default panic = "unwind"; do not use abort). Also emit an rlib for tests.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
